Refactored MtxStringFilter to use a set instead of a list