@@ -2,7 +2,9 @@ package com.edavalos.mtx.util.string;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.regex.Pattern;
 
 public final class MtxStringFilter {
@@ -11,56 +13,56 @@ public final class MtxStringFilter {
 
     private final StringFilteringPolicy filteringPolicy;
     private final char charReplacement;
-    private List<String> forbiddenWords;
+    private Set<String> forbiddenWords;
 
-    public MtxStringFilter(StringFilteringPolicy filteringPolicy, char charReplacement, List<String> forbiddenWords) {
+    public MtxStringFilter(StringFilteringPolicy filteringPolicy, char charReplacement, Set<String> forbiddenWords) {
         this.filteringPolicy = filteringPolicy;
         this.charReplacement = charReplacement;
-        this.forbiddenWords = forbiddenWords;
+        this.forbiddenWords = new HashSet<>(forbiddenWords);
     }
 
     public MtxStringFilter(StringFilteringPolicy filteringPolicy, char charReplacement, String[] forbiddenWords) {
-        this(filteringPolicy, charReplacement, new ArrayList<>(Arrays.asList(forbiddenWords)));
+        this(filteringPolicy, charReplacement, new HashSet<>(List.of(forbiddenWords)));
     }
 
     public MtxStringFilter(StringFilteringPolicy filteringPolicy, char charReplacement) {
-        this(filteringPolicy, charReplacement, new ArrayList<>());
+        this(filteringPolicy, charReplacement, new HashSet<>());
     }
 
-    public MtxStringFilter(StringFilteringPolicy filteringPolicy, List<String> forbiddenWords) {
+    public MtxStringFilter(StringFilteringPolicy filteringPolicy, Set<String> forbiddenWords) {
         this(filteringPolicy, DEFAULT_CHAR_REPLACEMENT, forbiddenWords);
     }
 
     public MtxStringFilter(StringFilteringPolicy filteringPolicy, String[] forbiddenWords) {
-        this(filteringPolicy, DEFAULT_CHAR_REPLACEMENT, new ArrayList<>(Arrays.asList(forbiddenWords)));
+        this(filteringPolicy, DEFAULT_CHAR_REPLACEMENT, new HashSet<>(List.of(forbiddenWords)));
     }
 
     public MtxStringFilter(StringFilteringPolicy filteringPolicy) {
-        this(filteringPolicy, DEFAULT_CHAR_REPLACEMENT, new ArrayList<>());
+        this(filteringPolicy, DEFAULT_CHAR_REPLACEMENT, new HashSet<>());
     }
 
-    public MtxStringFilter(char charReplacement, List<String> forbiddenWords) {
+    public MtxStringFilter(char charReplacement, Set<String> forbiddenWords) {
         this(DEFAULT_FILTERING_POLICY, charReplacement, forbiddenWords);
     }
 
     public MtxStringFilter(char charReplacement, String[] forbiddenWords) {
-        this(DEFAULT_FILTERING_POLICY, charReplacement, new ArrayList<>(Arrays.asList(forbiddenWords)));
+        this(DEFAULT_FILTERING_POLICY, charReplacement, new HashSet<>(List.of(forbiddenWords)));
     }
 
     public MtxStringFilter(char charReplacement) {
-        this(DEFAULT_FILTERING_POLICY, charReplacement, new ArrayList<>());
+        this(DEFAULT_FILTERING_POLICY, charReplacement, new HashSet<>());
     }
 
-    public MtxStringFilter(List<String> forbiddenWords) {
+    public MtxStringFilter(Set<String> forbiddenWords) {
         this(DEFAULT_FILTERING_POLICY, DEFAULT_CHAR_REPLACEMENT, forbiddenWords);
     }
 
     public MtxStringFilter(String[] forbiddenWords) {
-        this(DEFAULT_FILTERING_POLICY, DEFAULT_CHAR_REPLACEMENT, new ArrayList<>(Arrays.asList(forbiddenWords)));
+        this(DEFAULT_FILTERING_POLICY, DEFAULT_CHAR_REPLACEMENT, new HashSet<>(List.of(forbiddenWords)));
     }
 
     public MtxStringFilter() {
-        this(DEFAULT_FILTERING_POLICY, DEFAULT_CHAR_REPLACEMENT, new ArrayList<>());
+        this(DEFAULT_FILTERING_POLICY, DEFAULT_CHAR_REPLACEMENT, new HashSet<>());
     }
 
     // ---------------------- Public Methods -----------------------
@@ -107,25 +109,20 @@ public final class MtxStringFilter {
         return this.charReplacement;
     }
 
-    public List<String> getForbiddenWords() {
+    public Set<String> getForbiddenWords() {
         return this.forbiddenWords;
     }
 
-    public void setForbiddenWords(List<String> forbiddenWords) {
+    public void setForbiddenWords(Set<String> forbiddenWords) {
         this.forbiddenWords = forbiddenWords;
     }
 
     public void setForbiddenWords(String[] forbiddenWords) {
-        this.forbiddenWords = new ArrayList<>(Arrays.asList(forbiddenWords));
+        this.forbiddenWords = new HashSet<>(new ArrayList<>(Arrays.asList(forbiddenWords)));
     }
 
     public boolean addForbiddenWord(String newForbiddenWord) {
-        if (this.forbiddenWords.contains(newForbiddenWord)) {
-            return false;
-        } else {
-            this.forbiddenWords.add(newForbiddenWord);
-            return true;
-        }
+        return this.forbiddenWords.add(newForbiddenWord);
     }
 
     public boolean removeForbiddenWord(String forbiddenWord) {
